# facial_expression_detection

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-dlib.txt  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/Recordings/: Coding.txt
scripts/: emotion_detection.py  face_detection.py
src/facial_expression_detection/: __init__.py  constants.py  detector_cli.py  detector_sanity.py  emotion_cli.py  emotion_pipeline.py  logging_utils.py  runtime.py  video_io.py
tests/: test_detector_cli.py  test_detector_sanity.py  test_emotion_cli.py  test_emotion_pipeline.py
